--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				Valid links which show a status of NA may indicate a Redirect is occuring. 			
 			</p>
 			<input type="file" accept=".pdf" id="fileSelector" multiple /> &nbsp;&nbsp;
-			<button type="button" onclick="scanFile('fileSelector')">Analyze File</button> <br/>
+			<button type="button" onclick="scanFile('fileSelector')">Analyze File(s)</button> <br/>
 			<output for="fileSelector" id="selectedFiles"></output>
 			
 			<div id="resultSection">
